--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -365,9 +365,9 @@
     "CALC": "計算",
     "DONE": "計算完了！",
     "FAILED": "計算に失敗しました。",
-    "TIPS": "注：進行数(本機能)以外の最適するダメージの計算に関連する属性やバフが変化した場合、正確な結果を得るためには再計算する必要があります。",
+    "TIPS": "注：ステップ(本機能)以外の最適するダメージの計算に関連する属性やバフが変化した場合、正確な結果を得るためには再計算する必要があります。",
     "MAX_CRIT_RATE": "会心率上限",
-    "AUTO_PROGRESS": "進行数",
+    "AUTO_PROGRESS": "ステップ",
     "DAMAGE_RATE": "ダメージ倍率",
     "DAMAGE_BASE": "ダメージベース",
     "DAMAGE_RATE_ATTACH": "ダメージ倍率(追加)",
