--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -1,7 +1,7 @@
 {
-  "TITLE": "云原神",
+  "TITLE": "因提瓦特",
   "HOME": {
-    "TITLE": "原神伤害计算"
+    "TITLE": "派蒙"
   },
   "CHARACTER": {
     "PROPS": "人物属性",
