--- a/src/assets/i18n/cn_tra.json
+++ b/src/assets/i18n/cn_tra.json
@@ -1,7 +1,7 @@
 {
-  "TITLE": "雲原神",
+  "TITLE": "因提瓦特",
   "HOME": {
-    "TITLE": "原神傷害計算"
+    "TITLE": "派蒙"
   },
   "CHARACTER": {
     "PROPS": "人物屬性",
