--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,7 +1,7 @@
 {
-  "TITLE": "Cloud Genshin Impact",
+  "TITLE": "Inteyvat",
   "HOME": {
-    "TITLE": "Genshin Damage Calculator"
+    "TITLE": "Paimon"
   },
   "CHARACTER": {
     "PROPS": "Character Attributes",
