--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -1,7 +1,7 @@
 {
-  "TITLE": "クラウド原神",
+  "TITLE": "インテイワット",
   "HOME": {
-    "TITLE": "原神ダメージ計算"
+    "TITLE": "パイモン"
   },
   "CHARACTER": {
     "PROPS": "キャラ属性",
