Add new character BG and refine DPS panel

--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -464,6 +464,7 @@
     "ELEMENT_TYPE": "元素类型",
     "ATTACK_TYPE": "攻击类型",
     "DMG_TYPE": "伤害类型",
+    "TIMES": "次数",
     "DELIMITER": "・",
     "HIT": "段",
     "DPS_LABEL": "DPS",
