--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -465,6 +465,9 @@
   },
   "DPS": {
     "NAME": "DPS",
+    "OUTLINE": "ラベル", 
+    "CODE": "コード", 
+    "COPIED": "クリップボードにコピーされました!",
     "DURATION": "時間軸",
     "SECONDS": "s",
     "ELEMENT_TYPE": "元素タイプ",
@@ -476,6 +479,14 @@
     "DPS_LABEL": "DPS",
     "DMG_VAL_LABEL": "[ダメージ]",
     "APPENDED": "DPS: ダメージ情報を追加しました。",
-    "TIPS": "ヒント: DPSリストにダメージ情報を追加するには、ダメージタイプの左側の[+]ボタンをクリックしてください。"
+    "TIPS": "ヒント: DPSリストにダメージ情報を追加するには、ダメージタイプの左側の[+]ボタンをクリックしてください。", 
+    "IMPORT_DIALOG":{
+      "TITLE": "DPSコードインポート",   
+      "CONTENT": "キャラクターIDが「{{CHAR_ID}}」のコードをインポートしてください。", 
+      "OK": "インポート",
+      "CANCEL": "キャンセル",
+      "SUCCESS": "インポートに成功しました!",
+      "FAILED": "インポートに失敗しました。"
+    }
   }
 }
