--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -465,6 +465,9 @@
   },
   "DPS": {
     "NAME": "DPS",
+    "OUTLINE": "标签",
+    "CODE": "代码",
+    "COPIED": "已复制到剪切板！",
     "DURATION": "时间轴",
     "SECONDS": "秒",
     "ELEMENT_TYPE": "元素类型",
@@ -475,7 +478,15 @@
     "HIT": "段",
     "DPS_LABEL": "DPS",
     "DMG_VAL_LABEL": "[伤害值]",
-    "APPENDED": "DPS: 伤害信息追加成功",
-    "TIPS": "提示：点击伤害类型左侧的[+]按钮以向DPS列表中追加伤害信息。"
+    "APPENDED": "DPS: 伤害信息追加成功！",
+    "TIPS": "提示：点击伤害类型左侧的[+]按钮以向DPS列表中追加伤害信息。",
+    "IMPORT_DIALOG":{
+      "TITLE": "DPS代码导入",
+      "CONTENT": "请导入角色ID为「{{CHAR_ID}}」的代码",
+      "OK": "导入",
+      "CANCEL": "取消",
+      "SUCCESS": "导入成功！",
+      "FAILED": "导入失败。"
+    }
   }
 }
