--- a/src/assets/i18n/cn_tra.json
+++ b/src/assets/i18n/cn_tra.json
@@ -465,6 +465,9 @@
   },
   "DPS": {
     "NAME": "DPS",
+    "OUTLINE": "標籤",
+    "CODE": "代碼",
+    "COPIED": "已複製到剪貼板!",
     "DURATION": "時間軸",
     "SECONDS": "秒",
     "ELEMENT_TYPE": "元素類型",
@@ -475,7 +478,15 @@
     "HIT": "段",
     "DPS_LABEL": "DPS",
     "DMG_VAL_LABEL": "[傷害值]",
-    "APPENDED": "DPS: 傷害信息追加成功",
-    "TIPS": "提示: 點擊傷害類型左側的[+]按鈕以向DPS列表中追加傷害信息。"
+    "APPENDED": "DPS: 傷害信息追加成功！",
+    "TIPS": "提示: 點擊傷害類型左側的[+]按鈕以向DPS列表中追加傷害信息。", 
+    "IMPORT_DIALOG":{
+      "TITLE": "DPS代碼導入",
+      "CONTENT": "請導入角色ID為「{{CHAR_ID}}」的代碼",   
+      "OK": "導入",
+      "CANCEL": "取消", 
+      "SUCCESS": "導入成功!", 
+      "FAILED": "導入失敗。" 
+    }
   }
 }
